<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yz.im.ui.activity.ReportActivity">

    <include
        layout="@layout/layout_hx_title"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_131"
                android:background="@color/background"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/px_44"
                android:text="@string/report_reason"
                android:textColor="@color/text_2"
                android:textSize="@dimen/px_44"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <View
                style="@style/view_line_edge"
                android:background="@color/background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_110"
                android:layout_below="@+id/checkbox08"
                android:background="@color/background"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/px_44"
                android:text="@string/supplement_info"
                android:textColor="@color/text_2"
                android:textSize="@dimen/px_44"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/textviews">

                <EditText
                    android:id="@+id/report_reason"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/px_55"
                    android:background="@drawable/bg_edittext_normal"
                    android:gravity="top"
                    android:hint="@string/hint_supplement"
                    android:maxLength="50"
                    android:padding="@dimen/px_44"
                    android:textColor="@color/text_2"
                    android:textSize="@dimen/px_36"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
